syntax = "proto3";
package com.vng.security;

message Request{
    string username = 1;
    string password = 2;
    Token token = 3;
}

message Response{
    string username = 1;
    string chatCode = 2;
    Token token = 3;
}

message Token{
    string token = 1;
    string status = 2;
}

service AuthService{
    rpc login(Request) returns (Response);
    rpc logout(Request) returns (Response);
    rpc checkToken(Request) returns (Response);
    rpc loginWithGoogle(Request) returns (Response);
}