syntax = "proto3";
package com.vng.apigateway;

message LoginRequest{
    string username = 1;
    string password = 2;
}

message TokenResponse{
    string token = 1;
}

message Message{
    string message = 1;
}

message WebsocketInfo{
    string endpoint = 1;
    string topic = 2;
}

message Date {
    int32 day = 1;
    int32 month = 2;
    int32 year = 3;
}

message RegisterRequest {
    string fullname = 1;
    string username = 2;
    string password = 3;
    string confirm = 4;
    enum Gender {
        MALE = 0;
        FEMALE = 1;
        OTHER = 2;
    }
    Gender gender = 5;
    Date birthday = 6;
}

service WebClientService{
    rpc login(LoginRequest) returns (TokenResponse);
    rpc logout(Message) returns (Message);
    rpc getWebsocketInfo(Message) returns (WebsocketInfo);
    rpc register(RegisterRequest) returns (Message);
}